--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -10,7 +10,7 @@
             <p>Pronouns: he/him</p>
             <p>I'm passionate about music, video games, and exploring my creativity.</p>
             <p>Some of my goals for this class include exploring creativity in webpages which is something I was unable to do in software dev.</p>
-            <img src="/img/IMG_7212.JPG" alt="My Picture" width="300">
+            <img src="../img/IMG_7212.JPG" alt="My Picture" width="300">
             <p>Check out my Youtube video:</p>
             <a href="https://www.youtube.com/watch?v=80g7ZfgxgX0&ab_channel=dancoolo">Youtube Link</a>
         </center>
