edited wa4 to be customized to my preference

--- a/wa/wa4/index.html
+++ b/wa/wa4/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="buisnessStyle.css">
     <title>Fundamental CSS comprehension</title>
   </head>
@@ -10,20 +11,23 @@
 
   <section class="card">
     <header>
-      <h2>Chris Mills</h2>
+      <h2 class="glowing-text">Jignesh Mohanty</h2>
     </header>
     <article>
-      <p>50 My Street<br>
-         The Town<br>
-         Gray Peach<br>
-         UK<br>
-         ZO50 1MU<br>
-        <strong>Tel</strong>: 01234 567 890<br>
-        <strong>Mail</strong>: chris@nothere.com</p>
-      <img src="chris.jpg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
+      <p>1234 S Tomorrowland st<br>
+         Agonoth<br>
+         Valkenor<br>
+         Kryta<br>
+         XB12-43<br>
+        <strong>Tel</strong>: "45556-97000"<br>
+        <strong>Mail</strong>: Electric@binkmail.com</p>
+        <div class="img-container">
+          <img src="IMG_7212.JPG" alt="A picture of Me">
+        </div>
+      <!-- <img src="IMG_7212.JPG" alt="A picture of Me"> -->
     </article>
     <footer>
-      <p>Editing, writing, and web development services</p>
+      <p class="glowing-text">Musician, Developer, and Creator</p>
     </footer>
   </section>
 
