--- a/wa/wa5/wa5.html
+++ b/wa/wa5/wa5.html
@@ -13,7 +13,7 @@
 
     <!-- Main Content Layer -->
     <div class="overlay">
-        <img class="resize" src="broncos.jpg" alt="main image">
+        <img class="resize" src="b2.webp" alt="main image">
 
         <!-- Broncos Country on Top -->
         <div class="font-edit top-text">
@@ -22,6 +22,6 @@
 
         <!-- Let's Ride on Bottom -->
         <div class="font-edit bottom-text">
-            <h2>Let's<br>Ride!!!</h2>
+            <h2>Let's Ride!!!</h2>
 </body>
 </html>
