--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>ZΩRBLAXian VOID PULSE COLLECTIVE - Concert Descriptions</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>ZΩRBLAXian VOID PULSE COLLECTIVE</h1>
@@ -161,7 +161,5 @@
             displacement. Caution: Side effects may include localized reality breakdowns, spontaneous quantum rejuvenation, and temporary 
             immortality.
         </p>
-
-
 </body>
 </html>
