updated minor fixes to project

--- a/JS_Project/index.html
+++ b/JS_Project/index.html
@@ -13,7 +13,7 @@
 
         <button id="reset-button">Start Over</button>
         <p id="completion-message" class="hidden">Congratulations! You may now attempt to submit.</p>
-        <button id="submit-button" class="">Submit (If You Remember)</button>
+        <button id="submit-button" class="">submit</button>
     </div>
 
     <script src="script.js"></script>
